[gd_scene load_steps=11 format=3 uid="uid://bq2btisrq4br7"]

[ext_resource type="Script" path="res://scenes/minigames/unscrew-whiteboard/unscrew_whiteboard.gd" id="1_v7ww6"]
[ext_resource type="Texture2D" uid="uid://ctcs3mx1fduph" path="res://scenes/minigames/unscrew-whiteboard/assets/background.png" id="2_aoa87"]
[ext_resource type="Texture2D" uid="uid://bfhbl52norr51" path="res://scenes/minigames/unscrew-whiteboard/assets/board.png" id="3_nu0ho"]
[ext_resource type="Texture2D" uid="uid://bn0k5ps34scrb" path="res://scenes/minigames/unscrew-whiteboard/assets/pillar.png" id="4_3d0vl"]
[ext_resource type="Texture2D" uid="uid://lafdef7eayxh" path="res://scenes/minigames/unscrew-whiteboard/assets/screw.png" id="5_j5ow1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q22up"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lxhe0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_54yk1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8mxyj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yrg3i"]

[node name="UnscrewWhiteboard" type="Node2D"]
script = ExtResource("1_v7ww6")
polish_name = "RozkrÄ™canie tablicy"

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(582, 345)
scale = Vector2(0.679329, 0.679329)
texture = ExtResource("2_aoa87")

[node name="Whiteboard" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(586, 283)
scale = Vector2(0.70428, 0.70428)
texture = ExtResource("3_nu0ho")

[node name="Pillar" type="Sprite2D" parent="."]
position = Vector2(306, 478)
scale = Vector2(0.715385, 0.715385)
texture = ExtResource("4_3d0vl")

[node name="Pillar2" type="Sprite2D" parent="."]
position = Vector2(890, 478)
scale = Vector2(0.715385, 0.715385)
texture = ExtResource("4_3d0vl")

[node name="Screws" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="Screw" type="Button" parent="Screws"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 250.0
offset_top = 250.0
offset_right = 263.0
offset_bottom = 261.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_q22up")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lxhe0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_54yk1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8mxyj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yrg3i")

[node name="ScrewSprite" type="Sprite2D" parent="Screws/Screw"]
position = Vector2(7, 5)
scale = Vector2(0.605263, 0.605263)
texture = ExtResource("5_j5ow1")

[node name="Screw2" type="Button" parent="Screws"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 352.0
offset_top = 250.0
offset_right = 365.0
offset_bottom = 261.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_q22up")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lxhe0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_54yk1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8mxyj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yrg3i")

[node name="ScrewSprite" type="Sprite2D" parent="Screws/Screw2"]
position = Vector2(6, 5)
scale = Vector2(0.605263, 0.605263)
texture = ExtResource("5_j5ow1")

[node name="Screw3" type="Button" parent="Screws"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 250.0
offset_top = 357.0
offset_right = 263.0
offset_bottom = 368.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_q22up")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lxhe0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_54yk1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8mxyj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yrg3i")

[node name="ScrewSprite" type="Sprite2D" parent="Screws/Screw3"]
position = Vector2(7, 6)
scale = Vector2(0.605263, 0.605263)
texture = ExtResource("5_j5ow1")

[node name="Screw4" type="Button" parent="Screws"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 351.0
offset_top = 357.0
offset_right = 364.0
offset_bottom = 368.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_q22up")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lxhe0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_54yk1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8mxyj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yrg3i")

[node name="ScrewSprite" type="Sprite2D" parent="Screws/Screw4"]
position = Vector2(6.99997, 6)
scale = Vector2(0.605263, 0.605263)
texture = ExtResource("5_j5ow1")

[node name="Screw5" type="Button" parent="Screws"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 834.0
offset_top = 249.0
offset_right = 847.0
offset_bottom = 260.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_q22up")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lxhe0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_54yk1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8mxyj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yrg3i")

[node name="ScrewSprite" type="Sprite2D" parent="Screws/Screw5"]
position = Vector2(6.00003, 6)
scale = Vector2(0.605263, 0.605263)
texture = ExtResource("5_j5ow1")

[node name="Screw6" type="Button" parent="Screws"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 936.0
offset_top = 249.0
offset_right = 949.0
offset_bottom = 260.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_q22up")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lxhe0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_54yk1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8mxyj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yrg3i")

[node name="ScrewSprite" type="Sprite2D" parent="Screws/Screw6"]
position = Vector2(7, 6)
scale = Vector2(0.605263, 0.605263)
texture = ExtResource("5_j5ow1")

[node name="Screw7" type="Button" parent="Screws"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 833.0
offset_top = 357.0
offset_right = 846.0
offset_bottom = 368.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_q22up")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lxhe0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_54yk1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8mxyj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yrg3i")

[node name="ScrewSprite" type="Sprite2D" parent="Screws/Screw7"]
position = Vector2(8, 6)
scale = Vector2(0.605263, 0.605263)
texture = ExtResource("5_j5ow1")

[node name="Screw8" type="Button" parent="Screws"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 937.0
offset_top = 358.0
offset_right = 950.0
offset_bottom = 369.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_q22up")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lxhe0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_54yk1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8mxyj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yrg3i")

[node name="ScrewSprite" type="Sprite2D" parent="Screws/Screw8"]
position = Vector2(5, 5)
scale = Vector2(0.605263, 0.605263)
texture = ExtResource("5_j5ow1")

[connection signal="button_down" from="Screws/Screw" to="." method="_on_screw_1_button_down"]
[connection signal="button_up" from="Screws/Screw" to="." method="_on_screw_1_button_up"]
[connection signal="button_down" from="Screws/Screw2" to="." method="_on_screw_2_button_down"]
[connection signal="button_up" from="Screws/Screw2" to="." method="_on_screw_2_button_up"]
[connection signal="button_down" from="Screws/Screw3" to="." method="_on_screw_3_button_down"]
[connection signal="button_up" from="Screws/Screw3" to="." method="_on_screw_3_button_up"]
[connection signal="button_down" from="Screws/Screw4" to="." method="_on_screw_4_button_down"]
[connection signal="button_up" from="Screws/Screw4" to="." method="_on_screw_4_button_up"]
[connection signal="button_down" from="Screws/Screw5" to="." method="_on_screw_5_button_down"]
[connection signal="button_up" from="Screws/Screw5" to="." method="_on_screw_5_button_up"]
[connection signal="button_down" from="Screws/Screw6" to="." method="_on_screw_6_button_down"]
[connection signal="button_up" from="Screws/Screw6" to="." method="_on_screw_6_button_up"]
[connection signal="button_down" from="Screws/Screw7" to="." method="_on_screw_7_button_down"]
[connection signal="button_up" from="Screws/Screw7" to="." method="_on_screw_7_button_up"]
[connection signal="button_down" from="Screws/Screw8" to="." method="_on_screw_8_button_down"]
[connection signal="button_up" from="Screws/Screw8" to="." method="_on_screw_8_button_up"]
